k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: metabase
  labels:
    app: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
        - name: metabase
          image: metabase/metabase
          ports:
          - name: http
            containerPort: 3000
            protocol: TCP
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.12
          command: ["/cloud_sql_proxy",
                    "-instances=mindmatch-shared-cluster:europe-west3:shared-postgres-eu=tcp:3306",
                    "-credential_file=/secrets/cloudsql/credentials.json"]
          securityContext:
            runAsUser: 2  # non-root user
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
