k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: metabase-svc
spec:
  selector:
    app: metabase
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: metabase-port
  type: NodePort
